# revo-devcontainers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  release.config.mjs
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
.github/: dependabot.yml
.github/scripts/: test-databricks-container.sh  test-slim-container.sh
.github/workflows/: cd.yml  ci.yml  semantic-release.yml
src/revo-devcontainer-databricks/: Dockerfile
src/revo-devcontainer-databricksruntime/: Dockerfile  pyproject.toml
src/revo-devcontainer-slim/: Dockerfile
src/revo-devops-agent/: Dockerfile
