[project]
name = "revo-devcontainer-databricksruntime"
version = "0.1.0"
description = "Databricks Runtime DevContainers for RevoData."
authors = [
    { name = "Thomas Brouwer", email = "thomas.brouwer@revodata.nl" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers = ["Programming Language :: Python :: 3.11", "Operating System :: OS Independent"]
dependencies = [
    "ipython>=9.1.0",
    "jupyter>=1.1.1",
    "pyspark==3.5.0",
]
